--- a/UPnPClient/plugin.xml
+++ b/UPnPClient/plugin.xml
@@ -91,6 +91,20 @@
             </command>
          </toolbar>
       </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:UPnPClient.view.DetailInfo">
+         <command
+               commandId="UPnPClient.commands.registerRenderer"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                     variable="UPnPClient.with1">
+               </with>
+            </visibleWhen>
+         </command>
+      </menuContribution>
    </extension>
    <extension
          point="org.eclipse.ui.commands">
@@ -103,12 +117,20 @@
             id="UPnPClient.commands.cpstart"
             name="control point start">
       </command>
+      <command
+            id="UPnPClient.commands.registerRenderer"
+            name="register renderer">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
       <handler
             class="upnpclient.handlers.ControlPointStart"
             commandId="UPnPClient.commands.cpstart">
+      </handler>
+      <handler
+            class="upnpclient.handlers.RegisterRenderer"
+            commandId="UPnPClient.commands.registerRenderer">
       </handler>
    </extension>
    <extension
